added a notes file and some thoughts in notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 .ipynb_checkpoints/boost_EDA-checkpoint.ipynb
+.ipynb_checkpoints/notes-checkpoint.txt
