added notebooks for supervised learning and timeseries models and a txt doc for write up

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 .ipynb_checkpoints/boost_EDA-checkpoint.ipynb
 .ipynb_checkpoints/notes-checkpoint.txt
+.ipynb_checkpoints/boost_model-checkpoint.ipynb
+.ipynb_checkpoints/boost_timeseries_model-checkpoint.ipynb
+.ipynb_checkpoints/Write-up-checkpoint.txt
