moved data files to data folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .ipynb_checkpoints/boost_model-checkpoint.ipynb
 .ipynb_checkpoints/boost_timeseries_model-checkpoint.ipynb
 .ipynb_checkpoints/Write-up-checkpoint.txt
+.DS_Store
